<resources>
    <string name="app_name">Project_4</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Home</string>
    <string name="menu_quiz">Quiz</string>
    <string name="quiz_settings">Quiz Settings</string>
    <string name="assign_students">Assign Student</string>
    <string name="reports">Reports</string>
    <string name="answer_choice_3">choice3</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="answer_choice_4">Choice 4</string>
    <string name="answer_choice_2">Choice2</string>
    <string name="question">Question</string>
    <string name="answer_choice_1">Choice1</string>
    <string name="title_activity__student__quiz">Activity_Student_Quiz</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>